Resources/FoundationTheme/styles.css
/**
*  Publish Foundation theme
*  Copyright (c) John Sundell 2019
*  MIT license, see LICENSE file for details
*/

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    background: #fff;
    color: #000;
    font-family: Helvetica, Arial;
    text-align: center;
}

.wrapper {
    max-width: 900px;
    margin-left: auto;
    margin-right: auto;
    padding: 40px;
    text-align: left;
}

header {
    background-color: #eee;
}

header .wrapper {
    padding-top: 30px;
    padding-bottom: 30px;
    text-align: center;
}

header a {
    text-decoration: none;
}

header .site-name {
    font-size: 1.5em;
    color: #000;
    font-weight: bold;
}

nav {
    margin-top: 20px;
}

nav li {
    display: inline-block;
    margin: 0 7px;
    line-height: 1.5em;
}

nav li a.selected {
    text-decoration: underline;
}

h1 {
    margin-bottom: 20px;
    font-size: 2em;
}

h2 {
    margin: 20px 0;
}

p {
    margin-bottom: 10px;
}

a {
    color: inherit;
}

.description {
    margin-bottom: 40px;
}

.item-list > li {
    display: block;
    padding: 20px;
    border-radius: 20px;
    background-color: #eee;
    margin-bottom: 20px;
}

.item-list > li:last-child {
    margin-bottom: 0;
}

.item-list h1 {
    margin-bottom: 15px;
    font-size: 1.3em;
}

.item-list p {
    margin-bottom: 0;
}

.tag-list {
    margin-bottom: 15px;
}

.tag-list li,
.tag {
    display: inline-block;
    background-color: #000;
    color: #ddd;
    padding: 4px 6px;
    border-radius: 5px;
    margin-right: 5px;
}

.tag-list a,
.tag a {
    text-decoration: none;
}

.item-page .tag-list {
    display: inline-block;
}

.content {
    margin-bottom: 40px;
}

.browse-all {
    display: block;
    margin-bottom: 30px;
}

.all-tags li {
    font-size: 1.4em;
    margin-right: 10px;
    padding: 6px 10px;
}

footer {
    color: #8a8a8a;
}

@media (prefers-color-scheme: dark) {
    body {
        background-color: #222;
    }

    body,
    header .site-name {
        color: #ddd;
    }

    .item-list > li {
        background-color: #333;
    }

    header {
        background-color: #000;
    }
}

@media(max-width: 600px) {
    .wrapper {
        padding: 40px 20px;
    }
}

